store, contact, blog

--- a/index.html
+++ b/index.html
@@ -115,17 +115,21 @@
             </div>
             <ul class="dropdown-menu">
               <li class="dropdown-item">
-                <a href="about.html" class="dropdown-link">About Us</a>
+                <a href="faq.html" class="dropdown-link"
+                  >Frequently Asked Questions</a
+                >
               </li>
               <li class="dropdown-item">
-                <a href="team.html" class="dropdown-link">Our Team</a>
+                <a href="portfolio.html" class="dropdown-link">Portfolio</a>
               </li>
               <li class="dropdown-item">
-                <a href="services.html" class="dropdown-link">Services</a>
+                <a href="client-questionnaire.html" class="dropdown-link"
+                  >Client Questionnaire</a
+                >
               </li>
               <li class="dropdown-item">
-                <a href="testimonials.html" class="dropdown-link"
-                  >Testimonials</a
+                <a href="reviews.html" class="dropdown-link"
+                  >Review (Clients)</a
                 >
               </li>
             </ul>
@@ -157,28 +161,9 @@
             </ul>
           </li>
           <li class="nav-item">
-            <div class="nav-link-container">
-              <a
-                href="store.html"
-                class="nav-link"
-                onclick="setActiveNav(this)"
-              >
-                Store
-              </a>
-              <button class="dropdown-toggle" onclick="toggleDropdown(this)">
-                <i class="fas fa-chevron-down dropdown-arrow"></i>
-              </button>
-            </div>
-            <ul class="dropdown-menu">
-              <li class="dropdown-item">
-                <a href="prints.html" class="dropdown-link">Prints</a>
-              </li>
-              <li class="dropdown-item">
-                <a href="digital-products.html" class="dropdown-link"
-                  >Digital Products</a
-                >
-              </li>
-            </ul>
+            <a href="store.html" class="nav-link" onclick="setActiveNav(this)"
+              >Store</a
+            >
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link" onclick="setActiveNav(this)"
