--- a/pages/b2.html
+++ b/pages/b2.html
@@ -1,6 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Read the latest stories from Impasto Photography Studio. Discover behind-the-scenes insights, photography tips, and showcases of our recent work in Ghana and beyond."
+    />
+    <meta
+      name="keywords"
+      content="photography blog, Impasto Photography, photography tips, behind the scenes, wedding photography stories, portrait photography insights, Ghana photography studio"
+    />
+    <meta name="author" content="Impasto Photography Studio" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#2563eb" />
+    <title>Blog | Stories & Insights | Impasto Photography Studio Ghana</title>
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Blog",
+        "name": "Impasto Photography Studio Blog",
+        "description": "Stories and insights from our photography studio in Ghana",
+        "url": "https://impastophotography.com/blog.html",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Impasto Photography Studio",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://impastophotography.com/assets/images/logo2.png"
+          }
+        },
+        "blogPost": [
+          {
+            "@type": "BlogPosting",
+            "headline": "The Art of Capturing Emotion: Our Approach to Wedding Photography",
+            "image": "https://impastophotography.com/assets/images/blog-wedding.jpg",
+            "author": {
+              "@type": "Person",
+              "name": "Impasto Photography Team"
+            },
+            "publisher": {
+              "@type": "Organization",
+              "name": "Impasto Photography Studio",
+              "logo": {
+                "@type": "ImageObject",
+                "url": "https://impastophotography.com/assets/images/logo2.png"
+              }
+            },
+            "datePublished": "2025-05-15",
+            "dateModified": "2025-05-15"
+          },
+          {
+            "@type": "BlogPosting",
+            "headline": "Beyond the Lens: A Day in the Life at Impasto Photography Studio",
+            "image": "https://impastophotography.com/assets/images/blog-studio.jpg",
+            "author": {
+              "@type": "Person",
+              "name": "Impasto Photography Team"
+            },
+            "publisher": {
+              "@type": "Organization",
+              "name": "Impasto Photography Studio",
+              "logo": {
+                "@type": "ImageObject",
+                "url": "https://impastophotography.com/assets/images/logo2.png"
+              }
+            },
+            "datePublished": "2025-04-28",
+            "dateModified": "2025-04-28"
+          },
+          {
+            "@type": "BlogPosting",
+            "headline": "Portrait Photography: Revealing the Essence of Personality",
+            "image": "https://impastophotography.com/assets/images/blog-portrait.jpg",
+            "author": {
+              "@type": "Person",
+              "name": "Impasto Photography Team"
+            },
+            "publisher": {
+              "@type": "Organization",
+              "name": "Impasto Photography Studio",
+              "logo": {
+                "@type": "ImageObject",
+                "url": "https://impastophotography.com/assets/images/logo2.png"
+              }
+            },
+            "datePublished": "2025-04-10",
+            "dateModified": "2025-04-10"
+          }
+        ]
+      }
+    </script>
+
+    <!-- Font Awesome for Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
+    <!-- Open Graph Meta Tags for SEO -->
+    <meta
+      property="og:title"
+      content="Blog | Stories & Insights | Impasto Photography Studio"
+    />
+    <meta
+      property="og:description"
+      content="Read the latest stories from Impasto Photography Studio. Discover behind-the-scenes insights, photography tips, and showcases of our recent work."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://impastophotography.com/blog.html"
+    />
+    <meta
+      property="og:image"
+      content="https://impastophotography.com/assets/images/og-image.jpg"
+    />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Blog | Stories & Insights | Impasto Photography Studio"
+    />
+    <meta
+      name="twitter:description"
+      content="Read the latest stories from Impasto Photography Studio. Discover behind-the-scenes insights, photography tips, and showcases of our recent work."
+    />
+    <meta
+      name="twitter:image"
+      content="https://impastophotography.com/assets/images/og-image.jpg"
+    />
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/images/logo-fav.png" />
     <link rel="apple-touch-icon" href="assets/images/logo.png" />
